2002-03-16  Fumitoshi UKAI  <ukai@debian.or.jp>

	* -title support
	  modified [w3m-dev-en 00710] contrib: unofficial "xterm title" patch, updated for w3m-0.3
	  by Moritz Barsnick <barsnick@gmx.net>
	* NEWS: -title
	* fm.h (displayTitleTerm): added
	* proto.h (term_title): added
	* main.c (fusage): add -title
		(MAIN): add -title
		(quitfm): term_title("")
	* display.c (displayBuffer): term_title()
	* terms.c (title_str): added
		(TERM_INFO): added
		(term_info): modified from mouse_term_info
		(term_info_list): modified from xterm_mouse_term
				add "screen"
		(set_tty): check displayTitleTerm
		(term_title): added

2002-03-16  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03132] Re: Reload image
	* file.c (loadGeneralFile): b->type = "text/html"
	* file.c (loadImageBuffer): comment out getImageSize()
				image_flag = IMG_FLAG_AUTO
	* file.c (openGeneralPagerBuffer): buf->type = "text/html"
	* frame.c (resetFrameElement): if (buf->mailcap_source) ...
	* frame.c (frame_download_source): if (buf->mailcap_source) ...
	* main.c (vwSrc): #ifdef USE_IMAGE

2002-03-16  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03133] Re: w3mman.1
	* scripts/w3mman/Makefile (MAN1_TARGETS): added
			(MAN_TARGETS): use $(MAN_TARGETS)
			(INSTALL_MAN): added
			(install): use $MAN1_TARGETS, $(INSTALL_MAN)
	* scripts/w3mman/w3mman2html.cgi.in: $PAGER='cat'

2002-03-15  Fumitoshi UKAI  <ukai@debian.or.jp>

	* scripts/.cvsignore: add xface2xbm

2002-03-15  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03130] w3mman.1
	* scripts/w3mman/.cvsignore: add w3mman.1
	* scripts/w3mman/Makefile (MAN_DIR): added
		(MAN_TARGETS): added
		(all): add $(MAN_TARGETS)
		(.in): replace @LIB_DIR@
		(install): install $(MAN_TARGETS)
		(uninstall): uninstall $(MAN_TARGETS)
		(clean): clean $(MAN_TARGETS)
	* scripts/w3mman/w3mman.1.in: added
	* scripts/w3mman/w3mman2html.cgi.in: undef $PAGER

2002-03-15  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03129] Re: X-Face